Admin-commit
Se adapta el modelo de datos al diagrama desarrollado, aplicando la normalización de los roles y separándolos de la tabla usuario